--- a/src/Clementine/MainWindow.xaml
+++ b/src/Clementine/MainWindow.xaml
@@ -31,12 +31,12 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <ListBox x:Name="ListBoxCourses" Margin="265,10,307,195" Grid.RowSpan="2">
+                <TextBlock x:Name="ListBoxCourses" Margin="265,10,307,195" Grid.RowSpan="2" Background="White">
                     <Label Content="Required Courses in Current Major:" FontStyle="Italic" FontSize="14" Height="32" Width="281"/>
-                </ListBox>
-                <ListBox x:Name="ListBoxHUB" Margin="592,10,37,196" Grid.RowSpan="2">
+                </TextBlock>
+                <TextBlock x:Name="ListBoxHUB" Margin="580,10,37,196" Grid.RowSpan="2" Background="White">
                     <Label Content="Required HUB credits:" FontStyle="Italic" FontSize="14" Height="32" Width="220"/>
-                </ListBox>
+                </TextBlock>
                 <Label Content="Choose a Major:" Margin="265,54,348,163" FontStyle="Italic" FontSize="11" Foreground="White" Grid.Row="1"/>
                 <Label Content="Search Courses within Major:" Margin="559,56,54,163" FontStyle="Italic" FontSize="11" Foreground="White" Grid.Row="1"/>
 
@@ -67,7 +67,7 @@
             </Grid.RowDefinitions>
         </Grid>
 
-        <Grid x:Name="y1s2grid" HorizontalAlignment="Left" Height="394" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed">
+        <Grid x:Name="y1s2grid" HorizontalAlignment="Left" Height="412" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed" ShowGridLines="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -77,7 +77,7 @@
             </Grid.RowDefinitions>
         </Grid>
 
-        <Grid x:Name="y2s1grid" HorizontalAlignment="Left" Height="394" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed">
+        <Grid x:Name="y2s1grid" HorizontalAlignment="Left" Height="412" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed" ShowGridLines="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -87,7 +87,7 @@
             </Grid.RowDefinitions>
         </Grid>
 
-        <Grid x:Name="y2s2grid" HorizontalAlignment="Left" Height="394" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed">
+        <Grid x:Name="y2s2grid" HorizontalAlignment="Left" Height="412" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed" ShowGridLines="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -97,7 +97,7 @@
             </Grid.RowDefinitions>
         </Grid>
 
-        <Grid x:Name="y3s1grid" HorizontalAlignment="Left" Height="394" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed">
+        <Grid x:Name="y3s1grid" HorizontalAlignment="Left" Height="412" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed" ShowGridLines="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -107,7 +107,7 @@
             </Grid.RowDefinitions>
         </Grid>
 
-        <Grid x:Name="y3s2grid" HorizontalAlignment="Left" Height="394" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed">
+        <Grid x:Name="y3s2grid" HorizontalAlignment="Left" Height="412" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed" ShowGridLines="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -117,7 +117,7 @@
             </Grid.RowDefinitions>
         </Grid>
 
-        <Grid x:Name="y4s1grid" HorizontalAlignment="Left" Height="394" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed">
+        <Grid x:Name="y4s1grid" HorizontalAlignment="Left" Height="412" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed" ShowGridLines="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -127,7 +127,7 @@
             </Grid.RowDefinitions>
         </Grid>
 
-        <Grid x:Name="y4s2grid" HorizontalAlignment="Left" Height="394" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed">
+        <Grid x:Name="y4s2grid" HorizontalAlignment="Left" Height="412" VerticalAlignment="Top" Width="182" Margin="72,25,0,0" Background="White" Visibility="Collapsed" ShowGridLines="True">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
