--- a/src/Clementine/MainWindow.xaml
+++ b/src/Clementine/MainWindow.xaml
@@ -6,13 +6,13 @@
         xmlns:l="clr-namespace:UIControls;assembly=SearchTextBox"
         xmlns:local="clr-namespace:Clementine"
         mc:Ignorable="d"
-        Title="Class Schedule" Height="505" Width="867">
-    <Grid Background="#FFFF8843">
+        Title="Class Schedule" Height="505" Width="1200">
+    <Grid Background="#FFFF8843" Margin="0,0,327,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="479*"/>
             <ColumnDefinition Width="388*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Height="489" VerticalAlignment="Center" Grid.ColumnSpan="2">
+        <StackPanel Height="489" VerticalAlignment="Center" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="894">
             <Grid Margin="0,0,0,-1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="268*"/>
@@ -25,18 +25,18 @@
                 <RadioButton x:Name="Semester1" Content="Semester 1" Foreground="White" Background="#FFFF8843" BorderBrush="White" Margin="13,4,162,-4" Grid.RowSpan="2"/>
                 <RadioButton x:Name="Semester2" Content="Semester 2" Foreground="White" Background="#FFFF8843" BorderBrush="White" Margin="111,4,54,-4" Grid.RowSpan="2"/>
             </Grid>
-            <Grid Height="489" Width="867">
+            <Grid Height="489" Width="868">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock x:Name="ListBoxCourses" Margin="265,10,307,195" Grid.RowSpan="2" Background="White">
-                    <Label Content="Required Courses in Current Major:" FontStyle="Italic" FontSize="14" Height="32" Width="281"/>
-                </TextBlock>
-                <TextBlock x:Name="ListBoxHUB" Margin="580,10,37,196" Grid.RowSpan="2" Background="White">
-                    <Label Content="Required HUB credits:" FontStyle="Italic" FontSize="14" Height="32" Width="220"/>
-                </TextBlock>
+                <ListBox x:Name="ListBoxCourses" Margin="265,10,307,195" Grid.RowSpan="2" Background="White"><InlineUIContainer>
+                        <Label Content="Required Courses in Current Major:" FontStyle="Italic" FontSize="14" Height="32" Width="281"/>
+                    </InlineUIContainer></ListBox>
+                <ListBox x:Name="ListBoxHUB" Margin="580,10,37,196" Grid.RowSpan="2" Background="White"><InlineUIContainer>
+                        <Label Content="Required HUB credits:" FontStyle="Italic" FontSize="14" Height="32" Width="220"/>
+                    </InlineUIContainer></ListBox>
                 <Label Content="Choose a Major:" Margin="265,54,348,163" FontStyle="Italic" FontSize="11" Foreground="White" Grid.Row="1"/>
                 <Label Content="Search Courses within Major:" Margin="559,56,54,163" FontStyle="Italic" FontSize="11" Foreground="White" Grid.Row="1"/>
 
@@ -137,7 +137,7 @@
             </Grid.RowDefinitions>
         </Grid>
         <StackPanel Margin="179,345,209,-345" Grid.ColumnSpan="2">
-            <TextBox Width="246" Padding="5, 3, 5, 3" KeyUp="majortx_KeyUp" Name="majortx" />
+            <TextBox Width="246" Padding="5, 3, 5, 3" KeyUp="majortx_KeyUp" Name="majortx" TextChanged="majortx_TextChanged" />
             <Border Width="231" Height="92" BorderBrush="#00FFFFFF" BorderThickness="1">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="-8,0,-8,0" Background="White" Height="68" VerticalAlignment="Top">
                     <StackPanel Name="resultStack"></StackPanel>
@@ -153,6 +153,51 @@
             </Border>
             <Button x:Name="addtosem1" Content="add to current semester" Height="16" Background="#00FFFFFF" BorderBrush="#00FFFFFF" FontStyle="Italic" FontSize="11" Foreground="White" Click="addtosem1_Click" Width="126"/>
         </StackPanel>
+        <Grid Grid.Column="1" Margin="391,68,-327,52">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Label Content="Course 1:" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <Label Content="Course 2:" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="1"/>
+            <Label Content="Course 3:" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="2"/>
+            <Label Content="Course 4:" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="3"/>
+            <Label Content="Course 5:" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="4"/>
+
+            <TextBox x:Name="c1c" Grid.Column="1" Margin="41,24,41,24"/>
+            <TextBox x:Name="c2c" Grid.Column="1" Margin="41,24,41,24" Grid.Row="1"/>
+            <TextBox x:Name="c3c" Grid.Column="1" Margin="41,24,41,24" Grid.Row="2"/>
+            <TextBox x:Name="c4c" Grid.Column="1" Margin="41,24,41,24" Grid.Row="3"/>
+            <TextBox x:Name="c5c" Grid.Column="1" Margin="41,24,41,24" Grid.Row="4"/>
+
+            <TextBox x:Name="c1l" Grid.Column="2" Margin="41,24,41,24"/>
+            <TextBox x:Name="c2l" Grid.Column="2" Margin="41,24,41,24" Grid.Row="1"/>
+            <TextBox x:Name="c3l" Grid.Column="2" Margin="41,24,41,24" Grid.Row="2"/>
+            <TextBox x:Name="c4l" Grid.Column="2" Margin="41,24,41,24" Grid.Row="3"/>
+            <TextBox x:Name="c5l" Grid.Column="2" Margin="41,24,41,24" Grid.Row="4"/>
+        </Grid>
+
+        <Grid x:Name="gpagrid" Margin="390,437,-326,0" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label Content="Your GPA:" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </Grid>
+
+        <Grid Margin="391,0,-326,421" Grid.Column="1">
+            <Label Content="Number of Courses: " VerticalAlignment="Center" HorizontalAlignment="Left" Margin="60,0,0,0"/>
+            <TextBox x:Name="numcourses" Margin="184,21,81,21" TextChanged="numcourses_TextChanged"></TextBox>
+        </Grid>
+
     </Grid>
 
 </Window>
