--- a/src/Clementine/MainWindow.xaml
+++ b/src/Clementine/MainWindow.xaml
@@ -31,12 +31,16 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <ListBox x:Name="ListBoxCourses" Margin="265,10,307,195" Grid.RowSpan="2" Background="White"><InlineUIContainer>
+                <ListBox x:Name="ListBoxCourses" Margin="265,10,307,195" Grid.RowSpan="2" Background="White">
+                    <InlineUIContainer>
                         <Label Content="Required Courses in Current Major:" FontStyle="Italic" FontSize="14" Height="32" Width="281"/>
-                    </InlineUIContainer></ListBox>
-                <ListBox x:Name="ListBoxHUB" Margin="580,10,37,196" Grid.RowSpan="2" Background="White"><InlineUIContainer>
+                    </InlineUIContainer>
+                </ListBox>
+                <ListBox x:Name="ListBoxHUB" Margin="580,10,37,196" Grid.RowSpan="2" Background="White">
+                    <InlineUIContainer>
                         <Label Content="Required HUB credits:" FontStyle="Italic" FontSize="14" Height="32" Width="220"/>
-                    </InlineUIContainer></ListBox>
+                    </InlineUIContainer>
+                </ListBox>
                 <Label Content="Choose a Major:" Margin="265,54,348,163" FontStyle="Italic" FontSize="11" Foreground="White" Grid.Row="1"/>
                 <Label Content="Search Courses within Major:" Margin="559,56,54,163" FontStyle="Italic" FontSize="11" Foreground="White" Grid.Row="1"/>
 
@@ -195,7 +199,16 @@
 
         <Grid Margin="391,0,-326,421" Grid.Column="1">
             <Label Content="Number of Courses: " VerticalAlignment="Center" HorizontalAlignment="Left" Margin="60,0,0,0"/>
-            <TextBox x:Name="numcourses" Margin="184,21,81,21" TextChanged="numcourses_TextChanged"></TextBox>
+            <TextBox x:Name="numcourses" Margin="184,9,81,13" RenderTransformOrigin="0.5,0.5">
+                <TextBox.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform AngleX="-0.523"/>
+                        <RotateTransform/>
+                        <TranslateTransform X="-0.119"/>
+                    </TransformGroup>
+                </TextBox.RenderTransform>
+            </TextBox>
         </Grid>
 
     </Grid>
