--- a/src/layout/app.component.html
+++ b/src/layout/app.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="authentication">
-  <app-head><</app-head>
+  <app-head></app-head>
   <button type="button" mat-button (click)="drawer.toggle()">
     Menu
   </button>
